- invite of users and adding of new users works, but still some js/css issues around YUI buttons on IE - Adapted people.get to return an object containing a people property instead of an array and added avatar image url to the returned person data
git-svn-id: https://svn.alfresco.com/repos/alfresco-open-mirror/alfresco/HEAD@10054 7033f55c-6c29-4ad8-afba-765cb616e738

--- a/root/projects/slingshot/source/web/components/invite/addemail.css
+++ b/root/projects/slingshot/source/web/components/invite/addemail.css
@@ -26,7 +26,7 @@
 }
 
 .inviteusersbyemail .body .badd {
-	width: 50px;            
+	width: 90px;            
 	margin-right: -100%;
 }
 
@@ -40,10 +40,10 @@
 .inviteusersbyemail .title {
 	color: #009300;
 	font-weight: bold;
-	padding-top: 4px;
-	padding-left: 24px;
+	padding-top: 12px;
+	padding-left: 34px;
 	padding-bottom: 12px;
-	background: transparent url(images/pholder.gif) no-repeat 3px center;
+	background: transparent url(images/step-two.png) no-repeat 3px center;
 }
 
 .inviteusersbyemail  {
